longhorn/longhorn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-manager
  namespace: longhorn-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app: longhorn-manager
    spec:
      serviceAccountName: longhorn-service-account
      containers:
        - name: longhorn-manager
          image: longhornio/longhorn-manager:v1.9.2
          volumeMounts:
            - name: dev
              mountPath: /host/dev
      volumes:
        - name: dev
          hostPath:
            path: /dev
